--- a/test/images/node-perf/tf-wide-deep/Dockerfile
+++ b/test/images/node-perf/tf-wide-deep/Dockerfile
@@ -17,7 +17,13 @@ FROM $BASEIMAGE
 
 CROSS_BUILD_COPY qemu-QEMUARCH-static /usr/bin/
 
-RUN apt-get update && apt-get install -y wget time
+RUN echo "deb http://archive.debian.org/debian stretch main" > /etc/apt/sources.list && \
+    echo "deb http://archive.debian.org/debian-security stretch/updates main" >> /etc/apt/sources.list && \
+    echo 'Acquire::Check-Valid-Until "false";' > /etc/apt/apt.conf.d/99no-check-valid-until && \
+    apt-get update && \
+    apt-get install -y --allow-unauthenticated wget time && \
+    apt-get clean
+
 
 RUN case $(uname -m) in \
     aarch64) \
